# sync-storage-prototype

complex/cargo/: Cargo.toml
complex/webext-bridge/: Cargo.toml
complex/webext-bridge/src/: main.rs
