[package]
name = "webext-bridge"
version = "0.1.0"
authors = ["Kit Cambridge <kit@mozilla.com>"]
description = "Web Extension native messaging bridge for Toodle"

[[bin]]
path = "src/main.rs"
name = "toodle-bridge"

[dependencies]
serde = "1.0.21"
serde_derive = "1.0.21"
serde_json = "1.0.6"
toodle = { path = "../cargo", version = "0.1.0" }
